tests/baselines/reference/parserStrictMode6-negative.errors.txt
parserStrictMode6-negative.ts(1,1): error TS1100: Invalid use of 'eval' in strict mode.
parserStrictMode6-negative.ts(1,1): error TS2630: Cannot assign to 'eval' because it is a function.


==== parserStrictMode6-negative.ts (2 errors) ====
    eval++;
    ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.
    ~~~~
!!! error TS2630: Cannot assign to 'eval' because it is a function.